--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI Pipeline
 on:
   push:
     branches:
-      - tdd_zadanie
+      - branch_z_ci_yml  
   pull_request:
 
 jobs:
@@ -29,3 +29,10 @@ jobs:
       run: |
         coverage run -m unittest discover
         coverage report
+
+    - name: Run Super-Linter
+      uses: github/super-linter@v5
+      env:
+        VALIDATE_ALL_CODEBASE: false
+        DEFAULT_BRANCH: main
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
