--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,11 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
 
+    - name: Format Python Code with Black and isort
+      run: |
+        black .
+        isort .
+
     - name: Run tests with coverage
       run: |
         coverage run -m unittest discover
