--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,5 +39,5 @@ jobs:
       uses: github/super-linter@v5
       env:
         VALIDATE_ALL_CODEBASE: false
-        DEFAULT_BRANCH: main
+        DEFAULT_BRANCH: tdd_zadanie
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
